[project]
name = "welcome"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.4",
    "pytest-flask>=1.3.0",
    "pytest-cov>=6.0.0",
    "pep8>=1.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/welcome"]
